<resources>
    <string name="app_name">Schedulegenix</string>
    <string name="action_settings">Settings</string>
    <string name="Add_New">Add New</string>


    <string name="editS">Edit Schedule</string>
    <string name="deleteS">Delete Schedule</string>
    <string name="title_activity_display_contact">DisplaySchedule</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="venue">Venue</string>
    <string name="saveSchedule">Save Schedule</string>
    <string name="deleteSchedule">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="SchedulesButton">Schedules</string>

    <string name="addSchedule">Add New</string>
    <string name="home">Back to Home</string>
    <string name="Masses">Kilogram - Pound</string>
    <string name="kg">In Kilogram</string>
    <string name="ConvertButton">Convert</string>
    <string name="lb">In Pound</string>


    <string name="Liter">Liter  - Gallon</string>
    <string name="Temperature">Fahrenheit - Celsius</string>
    <string name="Length">cm - inch</string>
    <string name="uConvert">Unit Converter</string>
    <string name="ContactsButton">Contacts</string>
    <string name="PersonalButton">Personal Information</string>
    <string name="CardsButton">Credit Cards</string>

    <string name="edit">Edit Contact</string>

    <string name="delete">Delete Contact</string>

    <string name="title_activity_display_contact_store">DisplayContact</string>

    <string name="name">Name</string>

    <string name="phone">Phone</string>

    <string name="address">Address</string>

    <string name="email">Email</string>

    <string name="save">Save </string>

    <string name="deleteDrug">Are you sure, you want to delete it.</string>

    <string name="mycontacts">My Contacts</string>
    <string name="backtohome">BACK TO HOME</string>
    <string name="editPersonal">Edit Personal</string>
    <string name="deletePersonal">Delete Personal</string>
    <string name="title_activity_display_personal_store">DisplayPersonal</string>
    <string name="birthday">Birthday</string>
    <string name="nic">Nic</string>
    <string name="bAddress">Business Address</string>
    <string name="bPhoneNum">Business Phone Number</string>
    <string name="mPassportNum">Passport Number</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="savePersonal">Save personal</string>
    <string name="deletePersonalmessage">Are you sure, you want to delete it.</string>
    <string name="l">in litre</string>
    <string name="Gallon">In gallon</string>
    <string name="gallonAnswer">Answer in gallon</string>
    <string name="AnswerinLiter">Answer in Liter</string>

    <string name="Bankname">Bank name</string>
    <string name="brands">Card type</string>
    <string name="usage">Card number</string>
    <string name="sideEffects">Expiry date</string>
    <string name="Card_Information">Card information</string>
    <string name="edit_Information">Edit Information</string>
    <string name="delete_Information">Delete Information</string>
    <string name="SaveCard">Save</string>

    <string name="cm">In Cm</string>
    <string name="inch">In Inch</string>

</resources>