<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplaySchedules">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextTitle"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="32dp"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignBottom="@+id/editTextDate"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignBottom="@+id/editTextStartTime"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="163dp"
            android:layout_marginBottom="-1dp"
            android:text="@string/starttime"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="226dp"
            android:text="@string/endtime"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignBottom="@+id/editTextVenue"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="2dp"
            android:text="@string/venue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"></EditText>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTitle"
            android:layout_alignLeft="@+id/editTextTitle"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextDate"
            android:layout_alignRight="@+id/editTextDate"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextStartTime"
            android:layout_alignLeft="@+id/editTextStartTime"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="text">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextVenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEndTime"
            android:layout_alignLeft="@+id/editTextEndTime"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextVenue"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-8dp"
            android:layout_marginBottom="18dp"
            android:background="@color/shade2"
            android:onClick="run"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/saveSchedule"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>


</ScrollView>