<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayPersonalData">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextAddress"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextNic"
            android:layout_alignLeft="@+id/textView2"
            android:text="@string/nic"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextBaddress"
            android:layout_alignLeft="@+id/textView3"
            android:text="@string/bAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextPcode"
            android:layout_alignLeft="@+id/textView4"
            android:text="@string/pCode"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextBphoneNum"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/bPhoneNum"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextMpassportNum"
            android:layout_alignLeft="@+id/textView6"
            android:text="@string/mPassportNum"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextTfileNum"
            android:layout_alignLeft="@+id/textView7"
            android:text="@string/tFileNum"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextCarRegNum"
            android:layout_alignLeft="@+id/textView8"
            android:text="@string/carRegNum"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="192dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"></EditText>

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextNic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextAddress"
            android:layout_alignRight="@+id/editTextAddress"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextBaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextNic"
            android:layout_below="@+id/editTextNic"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/editTextPcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextBaddress"
            android:layout_below="@+id/editTextBaddress"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/editTextBphoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextPcode"
            android:layout_below="@+id/editTextPcode"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/editTextMpassportNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextBphoneNum"
            android:layout_below="@+id/editTextBphoneNum"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/editTextTfileNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextMpassportNum"
            android:layout_below="@+id/editTextMpassportNum"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/editTextCarRegNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextTfileNum"
            android:layout_below="@+id/editTextTfileNum"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextCarRegNum"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-57dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary"
            android:onClick="run"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/save"
            android:textColor="@android:color/background_light" />

        <requestFocus />
    </RelativeLayout>
</ScrollView>