<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w14"
    tools:context=".DisplayCardInformation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="360dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="-14dp"
            android:text="@string/Bankname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignBottom="@+id/editTextType"
            android:text="@string/brands"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignBottom="@+id/editTextNumber"
            android:text="@string/usage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignBottom="@+id/editTextDate"
            android:text="@string/sideEffects"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textStyle="bold"></EditText>

        <EditText
            android:id="@+id/editTextType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextType"
            android:layout_alignRight="@+id/editTextType"

            android:layout_marginTop="22dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextNumber"
            android:layout_alignLeft="@+id/editTextNumber"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textStyle="bold">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="116dp"
            android:layout_marginLeft="116dp"
            android:layout_marginTop="303dp"
            android:layout_marginEnd="138dp"
            android:layout_marginRight="138dp"
            android:layout_marginBottom="202dp"
            android:background="@color/shade5"
            android:onClick="run"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/save"
            android:textColor="@android:color/background_light" />


    </RelativeLayout>


</ScrollView>